@@ -3,13 +3,13 @@ plugins {
 }
 
 java {
-    sourceCompatibility = JavaVersion.VERSION_11
-    targetCompatibility = JavaVersion.VERSION_11
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(21)
+    }
 }
 
 application {
     mainClass = "io.github.plamentotev.xvalid.App"
-    applicationDefaultJvmArgs = listOf("-Xverify:none", "-XX:TieredStopAtLevel=1")
 }
 
 // Storing the dependencies on the file system (and the source code repository)
